attendeeController, EventController, EventViewModel, AttendeeModel